syntax = "proto3";
package pb;
import "game_code.proto";

// 代理申请
message CAgentJoin
{
    string agentname = 1;//名字
    string agentid = 2;//代理id
    string realname = 3;//真实姓名
    string weixin = 4;//微信
}

message SAgentJoin
{
    uint32 level = 1;//代理等级
    ErrCode error= 2;//错误码 ,0:正常
}

// 代理信息
message CMyAgent
{
}

message SMyAgent
{
    string agentname = 1;//名字
    string agentid = 2;//绑定的代理id
    string address = 3;//地址
    int64 profit = 4;//收益
    int64 WeekProfit = 5;//本周收益
    int64 WeekPlayerProfit = 6;//本周玩家业绩
    int64 HistoryProfit = 7;//历史收益
    int64 SubPlayerProfit = 8;//下属玩家业绩
    int64 SubAgentProfit = 9;//下属代理业绩
    string PopularizeURL = 10;//推广地址
    uint32 state = 11;//0不是代理,1开通代理,2审核中
    uint32 level = 12;//代理等级
    uint32 Build = 13;//下属绑定玩家数量
    uint32 AgentChild = 14;//下属代理数量
    uint32 BuildVaild = 15;//下属有效绑定数量
    ErrCode error= 16;//错误码 ,0:正常
}

// 代理管理
message CAgentManage
{
    uint32 page = 1;//页数
    string agentid = 2;//代理id,查询参数
    string userid = 3;//玩家id,server参数
}

message SAgentManage
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentManage list = 3;//列表
    ErrCode error= 4;//错误码 ,0:正常
}

message AgentManage
{
    string agentid = 1;//代理id
    string address = 2;//地址
    uint32 num = 3;//下级人数
    int64 profit = 4;//当前收益
    uint32 level = 5;//代理等级
}

// 代理收益明细
message CAgentProfit
{
    uint32 page = 1;//页数
    int64 time = 2;//收益日期时间截,查询参数
    uint32 level = 3;//收益等级
    string agentid = 4;//代理id,server参数
}

message SAgentProfit
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentProfitDetail list = 3;//列表
    ErrCode error= 4;//错误码 ,0:正常
}

message AgentProfitDetail
{
    string userid = 1;//代理id
    int64 profit = 2;//收益
    uint32 level = 3;//收益等级
    int32  gtype = 4;//game type
    uint32 rate = 5;//收益比例
}

// 代理收益提现订单明细
message CAgentProfitOrder
{
    uint32 page = 1;//页数
    uint32 type = 2;//0下级的订单,1自己的订单
    string agentid = 3;//代理id,server参数
}

message SAgentProfitOrder
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentProfitOrder list = 3;//列表
    uint32 type = 4;//0下级的订单,1自己的订单
    ErrCode error= 5;//错误码 ,0:正常
}

message AgentProfitOrder
{
    string orderid = 1;//id
    string userid = 2;//玩家id
    string nickname = 3;//玩家昵称
    int64 profit = 4;//提取金额
    string applytime = 5;//提单时间
    string replytime = 6;//响应时间
    int32 state = 7;//状态,0等待处理,1成功,2失败
}

// 代理收益提现申请
message CAgentProfitApply
{
    uint32 profit = 1;//提取金额
}

message SAgentProfitApply
{
    uint32 profit = 1;//提取金额
    ErrCode error= 2;//错误码 ,0:正常
}

// 代理收益提现受理
message CAgentProfitReply
{
    string orderid = 1;//orderid
    int32 state = 2;//状态,1同意,2拒绝
}

message SAgentProfitReply
{
    string orderid = 1;//orderid
    int32 state = 2;//状态,1同意,2拒绝
    int64 profit = 3;//提取金额
    ErrCode error= 4;//错误码 ,0:正常
}

// 代理收益排行榜
message CAgentProfitRank
{
    uint32 page = 1;//页数
}

message SAgentProfitRank
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentProfit list = 3;//列表
    ErrCode error= 4;//错误码 ,0:正常
}

message AgentProfit
{
    string nickname = 1;//玩家昵称
    string address = 2;//地址
    string userid = 3;//玩家id
    int64 profit = 4;//当前收益
}

// 代理玩家管理
message CAgentPlayerManage
{
    uint32 page = 1;//页数
    string userid = 2;//玩家id,查询参数
    AgentApproveState state = 3;//状态，0审批中或玩家，1通过，2拒绝
    string selfid = 4;//玩家id,server参数
}

message SAgentPlayerManage
{
    uint32 page = 1;//页数
    uint32 count = 2;//总数
    repeated AgentPlayerManage list = 3;//列表
    AgentApproveState state = 4;//状态，0审批中或玩家，1通过，2拒绝
    ErrCode error= 5;//错误码 ,0:正常
}

message AgentPlayerManage
{
    string userid = 1;//玩家id
    string nickname = 2;//昵称
    int64 coin = 3;//金币
    string agentid = 4;//代理id
    string address = 5;//地址
    string agentname = 6;//名字
    uint32 level = 7;//代理等级
    uint32 profitRate = 8;//收益占比
    string jointime = 9;//名字
    uint32 state = 10;//状态，0不是代理,1开通代理,2审核中
}

// 代理玩家申请审批
message CAgentPlayerApprove
{
    AgentApproveState state = 1;//1同意，2拒绝
    string userid = 2;//申请玩家id
    string selfid = 3;//审批玩家id,server参数
}

message SAgentPlayerApprove
{
    AgentApproveState state = 1;//1同意，2拒绝
    string userid = 2;//玩家id
    ErrCode error= 3;//错误码 ,0:正常
}